--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     const fileLinksContainer = document.getElementById("file-links");
 
     const apiKey = "JeMYhB2GQvn7QBfILeZwk3rHs2fquCoX";
-    const apiUrl = "https://api.fivemanage.com/api/image";
+    const apiUrl = "https://fmapi.net/api/v2/image";
 
     // Event listeners for drag-and-drop and file input
     uploadAreaResize.addEventListener("click", () => fileInputResize.click());
