--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>画像アップロード</h1>
+    <h1>画像アップロードV2</h1>
 
     <!-- Upload Area for Resize -->
     <div class="upload-area" id="upload-area-resize">
